crates/toml_edit/tests/snapshots/invalid/array/no-close-01.stderr
TOML parse error at line 1, column 25
  |
1 | no-close-01 = [ 1, 2, 3
  |                         ^
unclosed array, expected `]`
